redirect issues fixed

--- a/SAFRONCode/src/app/modules/home-page/home-page.component.html
+++ b/SAFRONCode/src/app/modules/home-page/home-page.component.html
@@ -236,7 +236,7 @@
                         <div class="card-body p-0">
                           <h6 class="card-subtitle mb-2 text-muted">Orthovoltage equipment not properly calibrated</h6>
                           <p class="card-text">Orthovoltage equipment transferred from one location to another. After relocation, commissioning, and use the errors in calibration of the unit were discovered. Incorrect orthovoltage output tables.</p>
-                          <a href="#" class="card-link"><small>Read more</small></a>
+                          <a href="javascript:void(0)" class="card-link"><small>Read more</small></a>
                         </div>
                         <hr>
                     </div>
@@ -245,7 +245,7 @@
                         <div class="card-body p-0">
                           <h6 class="card-subtitle mb-2 text-muted">HDR vaginal cylinder brachytherapy treatment delivered to incorrect location</h6>
                           <p class="card-text">Patient received first of three intended deliveries of HDR vaginal cylinder brachytherapy on 6/19/2014. After the vaginal cylinder was inserted, a planar digital x-ray image of the placement was.</p>
-                          <a href="#" class="card-link"><small>Read more</small></a>
+                          <a href="javascript:void(0)" class="card-link"><small>Read more</small></a>
                         </div>
                     </div>
                 </div>
@@ -256,7 +256,7 @@
                         <div class="card-body p-0">
                           <h6 class="card-subtitle mb-2 text-muted">Report No. 167- Guidelines by the AAPM and GEC-ESTRO</h6>
                           <p class="card-text">Although a multicenter, Phase III, prospective, randomized trial is the gold standard for evidence based medicine, it is rarely used in the evaluation of innovative devices because of many practical.</p>
-                          <a href="#" class="card-link"><small>Read more</small></a>
+                          <a href="javascript:void(0)" class="card-link"><small>Read more</small></a>
                         </div>
                         <hr>
                     </div>
@@ -265,7 +265,7 @@
                         <div class="card-body p-0">
                           <h6 class="card-subtitle mb-2 text-muted">ICRP Publication 97, Prevention of High-dose-rate Brachytherapy</h6>
                           <p class="card-text">Abstract - High-dose-rate (HDR) brachytherapy is a rapidly growing technique that has been replacing low-dose-rate (LDR) procedures over the last few years in both industrialised and developing.</p>
-                          <a href="#" class="card-link"><small>Read more</small></a>
+                          <a href="javascript:void(0)" class="card-link"><small>Read more</small></a>
                         </div>
                     </div>
                 </div>
