--- a/SAFRONCode/src/app/core/components/header/header.component.html
+++ b/SAFRONCode/src/app/core/components/header/header.component.html
@@ -13,9 +13,11 @@
                               English
                             </button>
                             <ul class="dropdown-menu z-index-1099" aria-labelledby="language">
-                                <li><a class="dropdown-item" href="#">English</a></li>
-                                <li><a class="dropdown-item" href="#">Spanish</a></li>
+                                <li><a class="dropdown-item" href="#" (click)="onLangChange('en')">English</a></li>
+                                <li><a class="dropdown-item" href="#" (click)="onLangChange('es')">Spanish</a></li>
                             </ul>
+                            <!-- <span (click)="onLangChange('en')">English</span>
+                            <span (click)="onLangChange('es')">Spanish</span> -->
                         </div>
                         
                     </div>
@@ -52,8 +54,56 @@
 
 <!-- Top navbar  -->
 
-
 <nav class="navbar navbar-expand-md navbar-dark p-0 navbar-bg">
+    <div class="container-fluid">
+        <button class="navbar-toggler m-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0 saf-navbar">
+                <li class="nav-item p-1">
+                    <a class="nav-link text-white active" aria-current="page" href="/home">Home</a>
+                </li>
+                <li class="nav-item p-1 dropdown">
+                    <a class="nav-link dropdown-toggle text-white" href="#" id="dropdown03" data-bs-toggle="dropdown"
+                        aria-expanded="false">Reports</a>
+                    <ul class="dropdown-menu" aria-labelledby="dropdown03">
+                        <li><a class="dropdown-item" href="/incident-report">Incident Reports</a></li>
+                        <li><a class="dropdown-item" href="#">Statistical Reports</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item p-1">
+                    <a class="nav-link text-white" href="#">Documents & Links</a>
+                </li>
+                <li class="nav-item p-1">
+                    <a class="nav-link text-white" href="#">Process Steps</a>
+                </li>
+                <!-- <li class="nav-item p-1 dropdown">
+                    <a class="nav-link text-white dropdown-toggle" href="#" id="dropdown02" data-bs-toggle="dropdown"
+                        aria-expanded="false">Admin</a>
+                    <ul class="dropdown-menu" aria-labelledby="dropdown02">
+                        <li><a class="dropdown-item" href="/manage-banner">Manage Banner</a></li>
+                        <li><a class="dropdown-item" href="/manage-update">Manage Letest Update</a></li>
+                        <li><a class="dropdown-item" href="#">Manage Registration</a></li>
+                    </ul>
+                </li> -->
+                <li>
+                    
+                </li>
+                <li class="nav-item p-1">
+                    <a class="nav-link text-white" href="#">Help</a>
+                </li>
+            </ul>
+            <div class="d-flex">
+                <a class="nav-link text-white register" href="#" >Register</a>
+            </div>
+        </div>
+    </div>
+</nav>
+
+
+<!-- {{'home' | translate}} -->
+<!-- <nav class="navbar navbar-expand-md navbar-dark p-0 navbar-bg">
     <div class="container-fluid">
         <button class="navbar-toggler m-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -63,13 +113,13 @@
                 <span class="nav-item p-2 text-white" *ngFor="let item of navItems">
                     <span *ngIf="item.children && item.children.length > 0">
                       <button class="border-0 navbar-bg text-white" mat-raised-button color="primary" [matMenuTriggerFor]="menu.childMenu">
-                        {{item.displayName}}
+                        {{item.displayName | translate}}
                       </button>
                       <app-menu-item #menu [items]="item.children"></app-menu-item>
                     </span>
                     <span *ngIf="!item.children || item.children.length === 0">
                       <button class="border-0 navbar-bg text-white" mat-button color="primary" [routerLink]="item.route">
-                        {{item.displayName}}
+                        {{item.displayName | translate}}
                       </button>
                     </span>
                   </span>
@@ -79,5 +129,5 @@
             </div>
         </div>
     </div>
-</nav>
+</nav> -->
 
