--- a/SAFRONCode/src/styles.css
+++ b/SAFRONCode/src/styles.css
@@ -3,3 +3,24 @@
 @import '../node_modules/font-awesome/css/font-awesome.min.css';
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+/* body {
+    font: normal 14px;
+    letter-spacing: 0px;
+    color: #4B4B4B;
+    opacity: 1;
+} */
+
+a {
+    color: #0d6efd;
+    text-decoration: none !important;
+}
+
+.breadcrumb-item.active {
+    color: #0d6efd;
+}
+.btn-rounded{
+    min-width: 90px;
+    border-radius: 20px;
+    border: 1px solid #c1c1c1;
+}
