--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -228,40 +228,40 @@
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
                     
                     <div class="card border-0 bg-transparent px-5">
-                        <h5 class="feature-subtitle mb-3">Featured Incident Reports</h5>
+                        <h5 class="feature-subtitle mb-3">{{'Featured Incident Reports' | translate}}</h5>
                         <div class="card-body p-0">
-                          <h6 class="card-subtitle mb-2 text-muted">Orthovoltage equipment not properly calibrated</h6>
-                          <p class="card-text">Orthovoltage equipment transferred from one location to another. After relocation, commissioning, and use the errors in calibration of the unit were discovered. Incorrect orthovoltage output tables.</p>
-                          <a href="javascript:void(0)" class="card-link"><small>Read more</small></a>
+                          <h6 class="card-subtitle mb-2 text-muted">{{data.featuredIncidentText}}</h6>
+                          <p class="card-text">{{data.featuredIncidentTextDescription}}</p>
+                          <a href="javascript:void(0)" class="card-link"><small>{{'Read more' | translate}}</small></a>
                         </div>
                         <hr>
                     </div>
                    
                     <div class="card border-0 bg-transparent px-5">
                         <div class="card-body p-0">
-                          <h6 class="card-subtitle mb-2 text-muted">HDR vaginal cylinder brachytherapy treatment delivered to incorrect location</h6>
-                          <p class="card-text">Patient received first of three intended deliveries of HDR vaginal cylinder brachytherapy on 6/19/2014. After the vaginal cylinder was inserted, a planar digital x-ray image of the placement was.</p>
-                          <a href="javascript:void(0)" class="card-link"><small>Read more</small></a>
+                          <h6 class="card-subtitle mb-2 text-muted">{{data.hdrtext}}</h6>
+                          <p class="card-text">{{data.hdrtextDescription}}</p>
+                          <a href="javascript:void(0)" class="card-link"><small>{{'Read more' | translate}}</small></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
                    
                     <div class="card border-0 bg-transparent px-5">
-                        <h5 class="feature-subtitle mb-3">Featured Documents & Links</h5>
+                        <h5 class="feature-subtitle mb-3">{{'Featured Documents & Links' | translate}}</h5>
                         <div class="card-body p-0">
-                          <h6 class="card-subtitle mb-2 text-muted">Report No. 167- Guidelines by the AAPM and GEC-ESTRO</h6>
-                          <p class="card-text">Although a multicenter, Phase III, prospective, randomized trial is the gold standard for evidence based medicine, it is rarely used in the evaluation of innovative devices because of many practical.</p>
-                          <a href="javascript:void(0)" class="card-link"><small>Read more</small></a>
+                          <h6 class="card-subtitle mb-2 text-muted">{{data.featureHeading}}</h6>
+                          <p class="card-text">{{data.featureHeadingTranscription}}</p>
+                          <a href="javascript:void(0)" class="card-link"><small>{{'Read more' | translate}}</small></a>
                         </div>
                         <hr>
                     </div>
                     
                     <div class="card border-0 bg-transparent px-5">
                         <div class="card-body p-0">
-                          <h6 class="card-subtitle mb-2 text-muted">ICRP Publication 97, Prevention of High-dose-rate Brachytherapy</h6>
-                          <p class="card-text">Abstract - High-dose-rate (HDR) brachytherapy is a rapidly growing technique that has been replacing low-dose-rate (LDR) procedures over the last few years in both industrialised and developing.</p>
-                          <a href="javascript:void(0)" class="card-link"><small>Read more</small></a>
+                          <h6 class="card-subtitle mb-2 text-muted">{{data.icprheading}}</h6>
+                          <p class="card-text">{{data.icprheadingDescription}}</p>
+                          <a href="javascript:void(0)" class="card-link"><small>{{'Read more' | translate}}</small></a>
                         </div>
                     </div>
                 </div>
