--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -2,16 +2,16 @@
     <footer>
         <div class="row mx-2 p-3 ">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                <p class="footer-p1 mb-1">International Atomic Energy Agency (IAEA)</p>
-                <p class="footer-p2">Vienna International Centre, PO Box 100, A-1400 Vienna, Austria <br> Telephone:
-                    (+431) 2600-0, Facsimile: (+431) 2600-7, E-mail: Official Mail</p>
+                <p class="footer-p1 mb-1">{{'International Atomic Energy Agency (IAEA)' | translate}}</p>
+                <p class="footer-p2">{{'Vienna International Centre, PO Box 100, A-1400 Vienna, Austria' | translate}} <br> {{'Telephone' | translate}}:
+                    (+431) 2600-0, {{'Facsimile' | translate}}: (+431) 2600-7, {{'E-mail' | translate}}: Official Mail</p>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 ">
                 <p class="footer-p3 pt-3">
-                    <a class="text-white" href="#">Contact us</a> <a class="text-white ms-2" href="#">Disclaimer</a>
+                    <a class="text-white" href="#">{{'Contact us' | translate}}</a> <a class="text-white ms-2" href="#">{{'Disclaimer' | translate}}</a>
                     <br>
-                    Copyright © 2021 International Atomic Energy Agency (IAEA). All rights reserved. <br>
-                    Version: 1.0.0
+                    {{'Copyright © 2021 International Atomic Energy Agency (IAEA). All rights reserved' | translate}}. <br>
+                    {{'Version' | translate}}: 1.0.0
                 </p>
             </div>
         </div>
