--- a/SAFRONCode/src/app/modules/home-page/home-page.component.html
+++ b/SAFRONCode/src/app/modules/home-page/home-page.component.html
@@ -61,54 +61,54 @@
     </Section>
 
     <!-- Quick actions -->
-
+    {{'Quick Actions' | translate}}
     <div class="container">
         <div class="panel bg-white shadow p-4 panel-border">
             <div class="panel-heading">
-                <h5 class="text-center quick-action-title mb-4">Quick Actions</h5>
+                <h5 class="text-center quick-action-title mb-4">{{'Quick Actions' | translate}}</h5>
             </div>
             <div class="panel-body">
                 <div class="row">
                     <div class="col text-center">
                         <a href="/searchincident-report">
                             <img src="assets\images\quick action\Path 1046.svg" class="img-action p-2" alt="">
-                            <p class="quick-action">Search Reports</p>
+                            <p class="quick-action">{{'Search Reports' | translate}}</p>
                         </a>
                     </div>
                     <div class="col text-center">
                         <a href="/submitincident-report">
                             <img src="assets\images\quick action\Group 139.svg" class="img-action p-2" alt="">
-                            <p class="quick-action">Submit Report</p>
+                            <p class="quick-action">{{'Submit Report' | translate}}</p>
                         </a>
                     </div>
                     <div class="col text-center">
                         <a href="/statistical-report">
                             <img src="assets\images\quick action\Path 1048.svg" class="img-action p-2" alt="">
-                            <p class="quick-action">View Statistical Reports</p>
+                            <p class="quick-action">{{'View Statistical Reports' | translate}}</p>
                         </a>
                     </div>
                     <div class="col text-center">
                         <a href="/documents-links">
                             <img src="assets\images\quick action\Group 1030.svg" class="img-action p-2" alt="">
-                            <p class="quick-action">Search Documents & Links</p>
+                            <p class="quick-action">{{'Search Documents & Links' | translate}}</p>
                         </a>
                     </div>
                     <div class="col text-center">
                         <a href="/process-steps">
                             <img src="assets\images\quick action\Path 1045.svg" class="img-action p-2" alt="">
-                            <p class="quick-action">Browse Incidents by Process Step</p>
+                            <p class="quick-action">{{'Browse Incidents by Process Step' | translate}}</p>
                         </a>
                     </div>
                     <div class="col text-center">
                         <a href="javascript:void(0)">
                             <img src="assets\images\quick action\Group 192.svg" class="img-action p-2" alt="">
-                            <p class="quick-action">View Instructions</p>
+                            <p class="quick-action">{{'View Instructions' | translate}}</p>
                         </a>
                     </div>
                     <div class="col text-center">
                         <a href="javascript:void(0)">
                             <img src="assets\images\quick action\Group 1305.svg" class="img-action p-2" alt="">
-                            <p class="quick-action">Download Reports</p>
+                            <p class="quick-action">{{'Download Reports' | translate}}</p>
                         </a>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
     <!-- Latest Updates -->
 
     <div class="container mt-5">
-        <h5 class="text-center letest-update-title mb-4">Latest Updates</h5>
+        <h5 class="text-center letest-update-title mb-4">{{'Latest Updates' | translate}}</h5>
         <div class="row">
             <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 col-12">
                 <div class="card border-0">
@@ -217,7 +217,7 @@
             </div>
         </div>
         <div class="row mt-3">
-            <div class="saf-view-all-updates text-center p-1"><a href="">View all updates</a></div>
+            <div class="saf-view-all-updates text-center p-1"><a href="">{{'View all updates' | translate}}</a></div>
         </div>
     </div>
     
@@ -227,7 +227,7 @@
 
     <section id="feature" class="mt-4 pb-4 bg-feature">
         <div class="container pt-3">
-            <h5 class="text-center feature-title mt-3 mb-5">Featured Reports, Documents & Links</h5>
+            <h5 class="text-center feature-title mt-3 mb-5">{{'Featured Reports, Documents & Links' | translate}}</h5>
             <div class="row mt-4">
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
                     
