--- a/SAFRONCode/src/app/core/components/header/header.component.html
+++ b/SAFRONCode/src/app/core/components/header/header.component.html
@@ -13,11 +13,9 @@
                               English
                             </button>
                             <ul class="dropdown-menu z-index-1099" aria-labelledby="language">
-                                <li><a class="dropdown-item" href="#" (click)="onLangChange('en')">English</a></li>
-                                <li><a class="dropdown-item" href="#" (click)="onLangChange('es')">Spanish</a></li>
+                                <li><a class="dropdown-item"  (click)="onLangChange('en')">English</a></li>
+                                <li><a class="dropdown-item"  (click)="onLangChange('es')">Spanish</a></li>
                             </ul>
-                            <!-- <span (click)="onLangChange('en')">English</span>
-                            <span (click)="onLangChange('es')">Spanish</span> -->
                         </div>
                         
                     </div>
@@ -27,11 +25,8 @@
                         </span>
                     </div>
                 </div>
-                
-                
             </div>
         </div>
-       
     </div>
     <div class="container-fluid custom-fluid">
         <div class="row pb-2 pt-2">
@@ -43,7 +38,7 @@
                 </a>
             </div>
             <div  class="col-auto ps-0 z-index-1000"> 
-                <p class="header-slogan custom-padding"> Safety Reporting and Learning <br class="d-xs-none">System for Radiotherapy</p>
+                <p class="header-slogan custom-padding"> {{'Safety Reporting and Learning' | translate}} <br class="d-xs-none">{{'System for Radiotherapy' | translate}}</p>
             </div>
         </div>
         
@@ -62,40 +57,37 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0 saf-navbar">
                 <li class="nav-item p-1">
-                    <a class="nav-link text-white active" aria-current="page" href="/home">Home</a>
+                    <a class="nav-link text-white active" aria-current="page" href="/home">{{'Home' | translate}}</a>
                 </li>
                 <li class="nav-item p-1 dropdown">
                     <a class="nav-link dropdown-toggle text-white" href="#" id="dropdown03" data-bs-toggle="dropdown"
-                        aria-expanded="false">Reports</a>
+                        aria-expanded="false">{{'Reports' | translate}}</a>
                     <ul class="dropdown-menu" aria-labelledby="dropdown03">
-                        <li><a class="dropdown-item" href="/incident-report">Incident Reports</a></li>
-                        <li><a class="dropdown-item" href="#">Statistical Reports</a></li>
+                        <li><a class="dropdown-item" href="/searchincident-report">{{'Incident Reports' | translate}}</a></li>
+                        <li><a class="dropdown-item" href="/submitincident-report">{{'Statistical Reports' | translate}}</a></li>
                     </ul>
                 </li>
                 <li class="nav-item p-1">
-                    <a class="nav-link text-white" href="#">Documents & Links</a>
+                    <a class="nav-link text-white" href="/documents-links">{{'Documents & Links' | translate}}</a>
                 </li>
                 <li class="nav-item p-1">
-                    <a class="nav-link text-white" href="#">Process Steps</a>
+                    <a class="nav-link text-white" href="/process-steps">{{'Process Steps' | translate}}</a>
                 </li>
-                <!-- <li class="nav-item p-1 dropdown">
+                <li class="nav-item p-1 dropdown">
                     <a class="nav-link text-white dropdown-toggle" href="#" id="dropdown02" data-bs-toggle="dropdown"
-                        aria-expanded="false">Admin</a>
+                        aria-expanded="false">{{'Admin' | translate}}</a>
                     <ul class="dropdown-menu" aria-labelledby="dropdown02">
-                        <li><a class="dropdown-item" href="/manage-banner">Manage Banner</a></li>
-                        <li><a class="dropdown-item" href="/manage-update">Manage Letest Update</a></li>
-                        <li><a class="dropdown-item" href="#">Manage Registration</a></li>
+                        <li><a class="dropdown-item" href="/banner">{{'Manage Banner' | translate}}</a></li>
+                        <li><a class="dropdown-item" href="/manage-update">{{'Manage Letest Update' | translate}}</a></li>
+                        <li><a class="dropdown-item" href="#">{{'Manage Registration' | translate}}</a></li>
                     </ul>
-                </li> -->
-                <li>
-                    
                 </li>
                 <li class="nav-item p-1">
-                    <a class="nav-link text-white" href="#">Help</a>
+                    <a class="nav-link text-white" href="#">{{'Help' | translate}}</a>
                 </li>
             </ul>
             <div class="d-flex">
-                <a class="nav-link text-white register" href="#" >Register</a>
+                <a class="nav-link text-white register" href="#" >{{'Register' | translate}}</a>
             </div>
         </div>
     </div>
