--- a/SAFRONCode/src/app/modules/manage-banner/manage-banner.component.html
+++ b/SAFRONCode/src/app/modules/manage-banner/manage-banner.component.html
@@ -1,20 +1,20 @@
 <div class="container">
-    <h5 class="text-center manage-banner-title mt-4">{{'Document_Details'  | translate }}Manage Banner</h5>
+    <h5 class="text-center manage-banner-title mt-4">{{'Banner.Manage_Banner'  | translate }}</h5>
     <p class="text-center banner-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, dolore!</p>
 
     <div class="row justify-content-end pe-sm-3">
         <a routerLink="/banner/add" class="btn btn-outline-primary btn-sm w-auto me-3">
-            <i class="fa fa-plus-square-o"> Add Banner</i>
+            <i class="fa fa-plus-square-o"> {{'Banner.Add_Banner' | translate}}</i>
         </a>
     </div>
     <div class="row panel panel-body shadow-sm mt-4 table-responsive border-radius-5">
         <table class="table">
             <thead class="bg-primary bg-opacity-25">
                 <tr class="border-0 border-hidden">
-                    <th scope="col" class="col-3">Title</th>
-                    <th scope="col" class="col-4">Description</th>
-                    <th scope="col" class="col-auto text-center">Display order</th>
-                    <th scope="col" class="col-2 text-center">Action</th>
+                    <th scope="col" class="col-3">{{'Banner.Title' | translate }}</th>
+                    <th scope="col" class="col-4">{{'Banner.Description' | translate}}</th>
+                    <th scope="col" class="col-auto text-center">{{'Banner.Display_Order'  | translate }}</th>
+                    <th scope="col" class="col-2 text-center">{{'Banner.Action' | translate }}</th>
                 </tr>
             </thead>
             <tbody class="">
